dhall/tests/type-inference/failure/unit/RecursiveRecordMergeRhsNotRecord.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:1
  |
1 | {=} ∧ True
  | ^^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
